[package]
name = "async-os"
version = "0.1.0"
edition = "2024"

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"]}
log = "0.4"
riscv = "0.11"
fdt = { version = "0.1.5", features = ["pretty-printing"] }
arrayvec = { version = "0.7.6", default-features = false }
buddy_system_allocator = "0.11"
bitmap-allocator = "0.2"
spin = "0.9"
bitflags = "1.3"

[profile.release]
debug = true